traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:1: error: Missing closing brace `}' assumed here
var x=0
^TraversalZigZag:13: error: Missing closing brace `}' assumed here
	override def forward(i:Int)  { 
        ^